--- a/eksctlcluster/cluster-config.yaml
+++ b/eksctlcluster/cluster-config.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: sg-week2-cluster
+  name: sg-w2-cluster
   region: us-east-1
   version: "1.28"
 
